fix spacing

--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -268,7 +268,7 @@ $text-font-size: 18px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 220px;
+    padding-bottom: 140px;
     min-height: 600px;
 
     @media only screen and (max-width: 750px) {
@@ -276,7 +276,7 @@ $text-font-size: 18px;
     }
 
     // We want to set a min-height because if carousel render is happening don't want the div to collapse
-    @media only screen and (max-width: 500px) {
+    @media only screen and (max-width: 650px) {
       min-height: 400px;
     }
 
@@ -325,7 +325,7 @@ $text-font-size: 18px;
 }
 
 .API-background {
-  margin-top: 110px;
+  margin-top: 100px;
   position: absolute;
   width: 100%;
   overflow: hidden;
@@ -334,10 +334,10 @@ $text-font-size: 18px;
   -webkit-transform-origin: 0;
   transform-origin: 0;
   background: $dark-grey;
-  height: 1250px;
+  height: 1200px;
 
   @media only screen and (max-width: 600px) {
-    height: 1400px;
+    height: 1350px;
   }
 }
 
@@ -346,7 +346,7 @@ $text-font-size: 18px;
   align-items: center;
   display: flex;
   flex-direction: column;
-  padding: 100px 100px 200px 100px;
+  padding: 0px 100px 100px 100px;
   color: white;
 
   @media only screen and (max-width: 750px) {
